--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
 		border: 1px solid #dddddd ;
-		background-image: url(../images/concrete-texture.png);
+		background-image: url(../images/concrete-texture.png); 
  }	
 
 .dropdown-menu {
@@ -9,8 +9,24 @@ body {
  
 }
 
+th{
+	text-align: center;
+}
+
+.td {
+    padding-top: .5em;
+    padding-bottom: 5px;
+}
+
 .btn-width {
 	width: 200px;
+}
+
+tbody{
+  overflow-y: scroll;      
+  height: 400px;            //  <-- Select the height of the body
+  width: 100%;
+  position: absolute;
 }
 
 
@@ -20,5 +36,110 @@ body {
 	display: inline-block;
 	width: 18%;
 	margin-top: 10px;
-	border-bottom: 1px solid black;
+/*	border-bottom: 1px solid black; */
+	text-align: left;
 }
+
+.box{
+		background-color: khaki;
+/*		border: 3px solid black ; */
+		margin-top: 5%;
+		margin-left: 30%;
+		width: 50%;
+		text-align: center; 
+
+}
+
+.tablebox{
+		background-color: white;
+		border: 3px solid black ;
+		margin-top: 5%;
+		margin-left: 30%;
+		width: 50%; 
+		text-align: center;
+
+}
+
+.gamesbox{
+		background-color: white;
+		border: 3px solid black ;
+		margin-top: 5%;
+/*		margin-left: 30%; */
+/*		width: 80%; */
+		text-align: center;
+
+}
+
+p{
+		font-size: 16px;
+		color: red;
+      	font-family: 'Georgia', Times, Times New Roman, serif;
+      	font-weight: bold;
+      	margin-top: 5px;
+		margin-bottom: 5px;
+		text-align: center;
+}
+
+.inputxt{
+		text-align: center;
+      	background-color: khaki;
+      	color: grey;
+      	font-size: 16px;
+      	font-family: 'Georgia', Times, Times New Roman, serif;
+      	font-weight: bold;
+      	margin-top: 5px;
+      	margin-bottom: 5px;
+ }
+		
+
+#foodtype{
+ width: 25%;
+ text-align: center;   
+ display: inline;
+}
+
+#foodtype option{
+  width: 25%; 
+  font-size: 16px; 
+  color: black;
+  text-align: center; 
+  font-family: 'Arial', Times, Times New Roman, serif;
+}
+
+#hotel{
+ width: 35%;
+ text-align: center;   
+ display: inline;
+}
+
+#hotel option{
+  width: 50%; 
+  font-size: 16px; 
+  color: black;
+  text-align: center; 
+  font-family: 'Arial', Times, Times New Roman, serif;
+  margin-bottom: 5px
+}
+
+#rest{
+ width: 35%;
+ text-align: center;   
+ display: inline;
+}
+
+#rest option{
+  width: 50%; 
+  font-size: 16px; 
+  color: black;
+  text-align: center; 
+  font-family: 'Arial', Times, Times New Roman, serif;
+}
+
+h2{
+		color: navy;
+      	font-size: 24px;
+      	font-weight: bolder;
+      	font-family: 'Arial', Times, Times New Roman, serif;
+      	text-align: center;
+}
+
